--- a/src/components/header.css
+++ b/src/components/header.css
@@ -32,6 +32,11 @@
     justify-content: center;
     gap: 70px;
   }
+  .logo {
+    height: 120px;
+    width: 120px;
+    border-radius: 20%;
+}
 
 
 .supp {
@@ -43,14 +48,6 @@
     color: #fff;
 }
 
-.logo {
-    height: 120px;
-    width: 120px;
-    border-radius: 20%;
-    min-width: 120px;
-    min-height: 120px;
-   
-}
 .cartimg{
     height: 20px;
 
@@ -62,4 +59,39 @@
 }
 .supplements {
     cursor: pointer;
+}
+@media(max-width: 900px) {
+    .header{
+        width: 100%;
+        height: 15vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-top: 0px;
+        margin-top: -15px;
+        position: fixed;
+    }
+    .navbar{ 
+        flex-direction: column;
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        align-items:center;
+        justify-content: center;
+    }
+    .supplements{
+        padding: 0;
+        margin: 0;
+    font-size: 3vw; 
+    display: flex;
+    align-items:center;
+    justify-content: space-around;
+    gap: 20px;
+    font-weight: 500;
+    }   
+    .logo {
+        width: 80px;
+        height: 80px;
+    }
 }
