--- a/src/components/rippedcard.css
+++ b/src/components/rippedcard.css
@@ -1,16 +1,21 @@
 .ripped {
     width: 100%;
     margin-top: 210px;
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.imgcontainer {
+.imgcontainer {    
+    width: 70%;
+    height: auto;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .fitness {
-    width: 60%;
-    height: 500px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     border-radius: 5px;
 }
@@ -19,28 +24,29 @@
     color: white;
     font-size: larger;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    position: absolute;
 }
-.text h1 {
+.shape {
     font-size: 29px;
     position: absolute;
-    top: 1480px;
-    left: 440px
+    top: 50px;
+    left: -400px;
 }
-.text p {
+.parabuy {
     position: absolute;
-    top: 1525px;
-    left: 440px
+    top: 90px;
+    left: -400px;
 }
-#second {
+.second {
     position: absolute;
-    top: 1550px;
-    left: 440px
+    top: 120px;
+    left: -400px;
 }
 .btnblack {
     border: 1px solid black;
     position: absolute;
-    top: 1590px;
-    left: 440px;
+    top: 150px;
+    left: -320px;
     background-color: aliceblue;
     color :black;
     width: 110px;
@@ -52,4 +58,15 @@
     background-color: black;
     color: white;
   
+}
+@media (max-width: 800px) {
+    .ripped{
+        display: none;
+    }
+    .btnblack {
+        display: none;
+    }
+    .text {
+        display: none;
+    }
 }
