--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -7,6 +7,7 @@
 }
 
 .main {
+    width: 100%;
     margin: 0px;
     padding: 0px;
     display: flex;
@@ -17,8 +18,9 @@
 
 .grid {
     margin-top: 160px;
-    width: 60%;
+    width: 90%;
     height: 500px;
+    max-width: 1200px;
     display :grid;
     grid-gap: 10px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -37,55 +39,56 @@
     filter: brightness(60%);
 }
 .imgwhey {
-
+    position: relative;
     grid-column: 1 / 3;
     grid-row: 1 / 2;
     
     }
  .imgomega{
-
+    position: relative;
 grid-column: 3;
 grid-row: 1/2;
         }
   .imgsnacks {
-
+    position: relative;
  grid-column: 4;
     grid-row: 2/1;
                     }
-#prot {
-    position: absolute;
-    top: 610px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: #e7efef;
-    font-size: xx-large;
-    left: 22%;
-    font-weight:900;
-}
-#snacks {
-    position: absolute;
-    top: 610px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: #e7efef;
-    font-size: xx-large;
-    left: 67%;
-    font-weight: bolder;
-}
-#sante {
-    position: absolute;
-    top: 610px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: #e7efef;
-    font-size: xx-large;
-    left: 51%;
-    font-weight: bolder;
-}
+                    .textprot {
+                        position: absolute;
+                        bottom: 5%;
+                        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+                        color: aliceblue;
+                        font-size: xx-large;
+                        left: 5%;
+                        font-weight: bolder;
+                    }
+                    .textsnacks {
+                        position: absolute;
+                        bottom: 5%;
+                        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+                        color: aliceblue;
+                        font-size: xx-large;
+                        left: 5%;
+                        font-weight: bolder;
+                    }
+                    .textsante {
+                        position: absolute;
+                        bottom: 5%;
+                        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+                        color: aliceblue;
+                        font-size: xx-large;
+                        left: 5%;
+                        font-weight: bolder;}
 
 .bs-container {
     margin-top: 10vh;
-    width: 60%;
+    width: 90%; /* Adjusted width for better responsiveness */
+    max-width: 1200px; /* Added max-width for larger screens */
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .products {
     margin-top: 7vh;
@@ -103,8 +106,10 @@ grid-row: 1/2;
 
 .products img {
         border-radius: 10px;
-        width: 250px;
-        height: 250px;
+        width: 100%;
+        height: auto; /* Auto height for better responsiveness */
+        min-height: 250px;
+        max-height: 250px;
         object-fit:scale-down;
         border: 2px solid gainsboro;
 }
@@ -121,5 +126,90 @@ grid-row: 1/2;
 
 .product p {
     font-weight: 430;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+@media (max-width: 767px) {
+ .main {
+    width: 100%;
+ }
+ .grid {
+    margin-top: 15vh;
+    width: 90%;
+    height: 100vh;
+    max-width: 1200px;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+.imgwhey {
+    position: relative;
+    grid-column: 1;
+    grid-row: 1;
+    display: inline-block;
+    }
+ .imgomega{
+    display: inline-block;
+    position: relative;
+grid-column: 1;
+grid-row: 2;
+        }
+  .imgsnacks {
+    display: block;
+    position: relative;
+ grid-column: 1;
+    grid-row: 3;
+                    }
+
+ .products {
+    margin-top: 7vh;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    height: 150px;
+    gap: 55px;
+ }
+ .textprot {
+    position: absolute;
+    bottom: 5%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: aliceblue;
+    font-size: xx-large;
+    left: 5%;
+    font-weight: bolder;
+}
+.textsnacks {
+    position: absolute;
+    bottom: 5%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: aliceblue;
+    font-size: xx-large;
+    left: 5%;
+    font-weight: bolder;
+}
+.textsante {
+    position: absolute;
+    bottom: 5%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: aliceblue;
+    font-size: xx-large;
+    left: 5%;
+    font-weight: bolder;
+}
+.best-sellers h1 {
+    font-weight: bold;
+    font-size: 7vw;
+}
+
+.products {
+    display: grid;
+    position: relative;
+    margin-top: 10%;
+ 
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    height: 90%;
+    gap: 05px;
+}
+
 }
