--- a/src/components/cart.css
+++ b/src/components/cart.css
@@ -10,7 +10,7 @@
     width: 700px;
     height: 250px;
     display: flex;
-  
+    
     align-items: center;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
     border-radius: 25px;
@@ -21,6 +21,7 @@
     object-fit:scale-down;
     width: 200px;
     max-height: 200px;
+    max-width: 150px;
   }
   
   .cartItem .description {
