--- a/src/pages/vetements.css
+++ b/src/pages/vetements.css
@@ -1,30 +1,33 @@
 .comingsoon {
+    position: relative;
     padding: 260px;
     width: 100%;
-    height: 50vh;
+    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 15vh;
 }
 .comingsoon img {
-    min-width: 400px;
+    position: relative;
+    max-width: 800px;
+    width: 90%;
     min-height: 400px;
     height: 48vh;
-    margin-top: 200px;
+    
 }
-.comingsoon h1 {
-    color: aquamarine;
+.bientot {
+    color: black;
     font-weight: 800;
     font-size: larger;
     position: absolute;
-    top: 16vh;
-    letter-spacing: 2px;
+    top: 4px
 }
-@media (max-width: 767px){
+@media (max-width: 1200px){
     .comingsoon img {
         min-width: none;
         min-height: none;
-        object-fit: cover;
+        object-fit:cover;
     }
     .comingsoon {
         height: 55vh;
