--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -49,6 +49,9 @@
 grid-column: 3;
 grid-row: 1/2;
         }
+        .snacks {
+            position: relative;
+        }
   .imgsnacks {
     position: relative;
  grid-column: 4;
